--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    
-    <meta name="title" content="Svelte/Typescript/Tailwind/Vite">
-    <meta name="description" content="Svelte/Typescript/Tailwind/Vite template">
 
-    <title>Svelte + TS + Tailwind + Vite App</title>
+    <meta name="title" content="Cosmos FM for KaiOS" />
+    <meta name="description" content="A Cosmos FM app for KaiOS" />
+
+    <title>Cosmos FM</title>
   </head>
   <body>
     <div id="app"></div>
