--- a/public/index.html
+++ b/public/index.html
@@ -13,8 +13,8 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
 
-    <link rel="stylesheet" href="/assets/bundle.css" />
-    <script defer src="/assets/bundle.js"></script>
+    <link rel="stylesheet" href="/bundle.css" />
+    <script defer src="/bundle.js"></script>
   </head>
   <body>
     <div id="app"></div>
